--- a/web-components/logged_in_example.html
+++ b/web-components/logged_in_example.html
@@ -896,8 +896,15 @@
         </div>
 
 		<!-- Start shop by brand web components example -->
-					<hero-banner-a></hero-banner-a>
-					<!-- End shop by brand web components example -->
+		  <hero-banner-a
+      		     data-title="Hero Banner A"
+        	     data-image="https://static.thcdn.com/images/xlarge/webp/widgets/190-en/09/Coca-cola-banner-1920x700-073909.png"
+      		     data-url="https://www.yourcoca-cola.co.uk/shop.list?pageNumber=1&facetFilters=en_brand_content:Coca-Cola+Original+Taste"
+      		     data-text="Shop All Coca Cola products"
+      		     data-btn-color="#636363"
+      		     data-btn-bg-color="#f4af00"
+      		   ></hero-banner-a>
+		<!-- End shop by brand web components example -->
         <div class="row d-flex mt-5 pb-5 butchery-fruit-veg-row">
             <div class="col-12 col-md-8 pl-0 pr-2 butchery">
                     <div class="d-flex">
