--- a/web-components/index.html
+++ b/web-components/index.html
@@ -39,10 +39,15 @@
       <p class="display-6 text-center">Link To Shop</p>
       <link-to-shop></link-to-shop>
     </div>
-    <div class="container position-relative text-center mb-5">
       <p class="display-6 text-center">Hero Banner A</p> 
-      <hero-banner-a></hero-banner-a>
-    </div>
+          <hero-banner-a
+      data-title="Hero Banner A"
+      data-image="https://static.thcdn.com/images/xlarge/webp/widgets/190-en/09/Coca-cola-banner-1920x700-073909.png"
+      data-url="https://www.yourcoca-cola.co.uk/shop.list?pageNumber=1&facetFilters=en_brand_content:Coca-Cola+Original+Taste"
+      data-text="Shop All Coca Cola products"
+      data-btn-color="#636363"
+      data-btn-bg-color="#f4af00"
+      ></hero-banner-a>
     <div class="container position-relative text-center pt-5 mb-5 hero-banner-b">
       <p class="display-6 text-center">Hero Banner B</p> 
       <hero-banner-b></hero-banner-b>
