--- a/web-components/index.html
+++ b/web-components/index.html
@@ -48,10 +48,30 @@
       data-btn-color="#636363"
       data-btn-bg-color="#f4af00"
       ></hero-banner-a>
+
+    <!--
     <div class="container position-relative text-center pt-5 mb-5 hero-banner-b">
       <p class="display-6 text-center">Hero Banner B</p> 
       <hero-banner-b></hero-banner-b>
-    </div>
+    </div>-->
+
+    <hero-banner-b 
+        data-title="hero-banner-b"
+        data-image = 'https://static.thcdn.com/images/xlarge/webp/widgets/190-en/57/original-Brands_Banner_Desktop_1920_x_586-020057.png';
+        data-text = 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.';
+        data-textColor = '#000000';
+        data-textSize = '16px';
+        data-heading = 'Enquiry Form';
+        data-headingSize = '24px';
+        data-headingColor = '#404040';
+        data-buttonText = 'Enquire here';
+        data-textBgColor = '#ffffff';
+        data-buttonUrl = 'https://www.yourcoca-cola.co.uk/contact-us.list';
+        data-buttonFontColor = '#ffffff';
+        data-buttonBgColor = '#000000';  
+      ></hero-banner-b>
+    
+    
     <div class="container position-relative text-center pt-5 mb-5">
       <p class="display-6 text-center">Hero Banner Carousel</p> 
       <hero-banner-carousel></hero-banner-carousel>
