--- a/web-components/index.html
+++ b/web-components/index.html
@@ -96,10 +96,19 @@
       <p class="display-6 text-center">Product Category</p> 
       <product-category></product-category>
     </div>
-    <div class="container text-center mb-5">
+    
+    <!--<div class="container text-center mb-5">
       <p class="display-6 text-center">Heading</p> 
       <custom-heading></custom-heading>
-    </div>
+    </div>-->
+
+    <custom-heading 
+      data-title="custom-heading"
+      data-heading="Shop products"
+      data-fontColor="#d3d3d3"
+      data-fontSize="48px"
+    ></custom-heading>
+    
     <div class="container mb-5">
       <p class="display-6 text-center">Product Categories</p> 
       <product-categories></product-categories>
