--- a/web-components/index.html
+++ b/web-components/index.html
@@ -74,10 +74,16 @@
       <p class="display-6 text-center">Image Card</p>
       <image-card></image-card>
     </div>
-    <div class="container position-relative text-center mb-5">
-      <p class="display-6 text-center">Custom Button</p> 
-      <custom-button></custom-button>
-    </div>
+
+    <custom-button 
+      data-title="custom-button"
+      data-text="Shop all Coca-Cola products"
+      data-url="https://www.yourcoca-cola.co.uk/shop.list?pageNumber=1&facetFilters=en_brand_content:Coca-Cola+Original+Taste|en_brand_content:Coca-Cola+Zero+Sugar"
+      data-fontColor="#000000"
+      data-buttonBgColor="#48a832"
+    ></custom-button>
+
+    
     <div class="container text-left mb-5">
       <p class="display-6 text-center">Hero Image</p> 
       <hero-image></hero-image>
