--- a/web-components/index.html
+++ b/web-components/index.html
@@ -108,11 +108,13 @@
       data-buttonBgColor="#48a832"
     ></custom-button>
 
+    <hero-image 
+      data-title="hero-image"
+      data-image="https://static.thcdn.com/images/xlarge/webp/widgets/190-en/19/original-ABBA_Brand_Page_Banner_1-012219.png"
+      data-alt="Absolut Vodka"
+      data-url="https://www.yourcoca-cola.co.uk/brands/absolut-vodka-sprite.list"
+    ></hero-image>
     
-    <div class="container text-left mb-5">
-      <p class="display-6 text-center">Hero Image</p> 
-      <hero-image></hero-image>
-    </div>
     <div class="container text-left mb-5">
       <p class="display-6 text-center">Sub Page Navigation</p> 
       <sub-page-navigation></sub-page-navigation>
