--- a/web-components/index.html
+++ b/web-components/index.html
@@ -48,10 +48,18 @@
       data-cardBgColor="#f8f8f8"
     ></info-card-b>  
     
-    <div class="container mb-5">
-      <p class="display-6 text-center">Product Card</p>
-      <product-card></product-card>
-    </div>
+    <product-card
+      data-title="product-card"
+      data-description="Coca-Cola Zero Sugar"
+      data-volume="24 x 330ml"
+      data-image="https://static.thcdn.com/images/large/webp//productimg/1600/1600/12657922-9294861134854115.jpg"
+      data-midascode="100001"
+      data-brand="coca-cola"
+      data-price="13.09"
+      data-rrp="1.39"
+      data-por="49.7"
+    ></product-card>
+    
     <div class="container mb-5">
       <p class="display-6 text-center">Product Card List</p>
       <product-card-list></product-card-list>
