--- a/web-components/index.html
+++ b/web-components/index.html
@@ -8,6 +8,7 @@
     <title>Booker web components - shop by brand</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script defer src="./app.js"></script>
     <script defer src="./components.js"></script>
     <link rel="stylesheet" href="./custom.css" />
   </head>
