--- a/shop-by-brand-listing-sample/index.html
+++ b/shop-by-brand-listing-sample/index.html
@@ -657,6 +657,8 @@
 
         .card {
             border-radius: 0.8rem;
+	    width: 150px;
+	    max-width: 150px;
         }
 
         .card-body {
