--- a/shop-by-brand-listing-sample/index.html
+++ b/shop-by-brand-listing-sample/index.html
@@ -652,17 +652,21 @@
         }
 
         .featuredImg {
-            max-width: 100px;
+            width: 4.6rem;
+            max-width: 4.6rem;
+
         }
 
         .card {
             border-radius: 0.8rem;
-	    width: 150px;
-	    max-width: 150px;
+            width: 9.3rem;
+            max-width: 9.3rem;
         }
 
         .card-body {
             padding: 0.8rem;
+            height: 6.25rem;
+            max-height: 6.25rem;
         }
 
         .card:hover {
@@ -999,3 +1003,5 @@ pageSearchUrl = '/products/search'
 </script>
 
 </html>
+
+
