--- a/shop-locally-registration/index.html
+++ b/shop-locally-registration/index.html
@@ -1,1 +1,127 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Booker Shop Locally Registration</title>
+  <link href='https://fonts.googleapis.com/css?family=Lato' rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <style>
+    .shop-locally {
+      background: #0454A1;
+      color: #ffffff;
+    }
+
+    body {
+      background: #BFBFBF;
+      font-family: 'Lato';
+    }
+
+    .form-field, .form-field:active, .form-field:focus {
+      background: #FFDD00;
+    }
+
+    
+  </style>
+</head>
+<body>
+  <div class="container">
+    <div class="row shop-locally mb-3">
+      <div class="col">
+        <h2>Customer Registration Document</h2>
+      </div>
+    </div>
+    <form class="form">
+      <div class="row shop-locally mb-2">
+        <div class="col">
+          <h4>CUSTOMER DETAILS</h4>
+        </div>
+      </div>
+      <div class="row mb-2">
+        <div class="col-4 bg-white">
+          <label><b>Trading Name</b></label>
+        </div>
+        <div class="col-8">
+          <input type="text" class="form-control form-field" name="tradingName" required>
+        </div>
+      </div>
+      <div class="row mb-2">
+        <div class="col-4 bg-white">
+          <label><b>Booker Customer No. (for this store)</b></label>
+        </div>
+        <div class="col-8">
+          <input type="text" maxlength="9" class="form-control form-field" name="tradingName" required>
+        </div>
+      </div>
+      <div class="row mb-2">
+        <div class="col-4 bg-white">
+          <label><b>Customer Name</b></label>
+        </div>
+        <div class="col-8">
+          <input type="text" class="form-control form-field" name="customerName" required>
+        </div>
+      </div>
+      <div class="row mb-2">
+        <div class="col-4 bg-white">
+          <label><b>Store Address 1</b></label>
+        </div>
+        <div class="col-8">
+          <input type="text" class="form-control form-field" name="storeAddress1" required>
+        </div>
+      </div>
+      <div class="row mb-2">
+        <div class="col-4 bg-white">
+          <label><b>Store Address 2</b></label>
+        </div>
+        <div class="col-8">
+          <input type="text" class="form-control form-field" name="storeAddress2" required>
+        </div>
+      </div>
+      <div class="row mb-2">
+        <div class="col-4 bg-white">
+          <label><b>Town / City</b></label>
+        </div>
+        <div class="col-8">
+          <input type="text" class="form-control form-field" name="townCity" required>
+        </div>
+      </div>
+      <div class="row mb-2">
+        <div class="col-4 bg-white">
+          <label><b>County</b></label>
+        </div>
+        <div class="col-2">
+          <input type="text" class="form-control form-field" name="county" required>
+        </div>
+        <div class="col-4 bg-white">
+          <label><b>Postcode</b></label>
+        </div>
+        <div class="col-2">
+          <input type="text" class="form-control form-field" name="postCode" required>
+        </div>
+      </div>
+      <div class="row shop-locally mb-2">
+        <div class="col">
+          <h6>ADDITIONAL INFORMATION</h6>
+        </div>
+      </div>
+      <div class="row mb-3">
+        <div class="col-4 bg-white">
+          <label><b>Store Category</b></label>
+        </div>
+        <div class="col-3">
+          <input type="text" class="form-control form-field" name="storeCategory" required>
+        </div>
+      </div>
+      <div class="row shop-locally mb-2">
+        <div class="col">
+          <h6>CUSTOMER DECLARATION</h6>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col bg-white">
+          <p>I am the owner of the above business and trade at the above address. I agree to comply with the obligations set out in this Agreement and in particular to support the promotion activity. I understand that failing to comply with my obligations may result in my membership of Retail Club being cancelled by Booker.</p>
+        </div>
+      </div>
+    </form>
+  </div>
+</body>
+</html>
