--- a/shop-by-brand-listing-sample/index.html
+++ b/shop-by-brand-listing-sample/index.html
@@ -678,7 +678,7 @@
         }
 
         a.alphabetFilter.disabled {
-            border: 1px solid #cccccc;
+            border: 1px solid #8e8e8e;
             pointer-events: none;
             background: #cccccc;
             color: #ffffff;
