--- a/shop-locally-registration/index.html
+++ b/shop-locally-registration/index.html
@@ -60,7 +60,7 @@
         <h4>Shop Locally Sign Up</h4>
         Booker Group would like to send you marketing information regarding our products and services, special offers, events and market research. Please tick below to confirm that you're happy for Booker to contact you for this purpose. You can unsubscribe at any time by logging in at booker.co.uk, or by clicking unsubscribe in any of our promotional Emails or SMS messages you receive. Please note that the below preferences refer to marketing activities only. Booker may still contact you by the above methods for essential communication regarding your account.<br>
         <br>
-        For more information regarding help with how Booker Group companies use your personal data please see our privacy policy. For full T&C's <a href="./agreement.html">click here</a>
+        For more information regarding help with how Booker Group companies use your personal data please see our privacy policy. For full T&C's <a href="./agreement.html" target="_blank">click here</a>
       </div>
       <div class="container p-3 shop-locally mb-3">
         <h4>CUSTOMER DETAILS</h4>
