--- a/shop-locally-registration/index.html
+++ b/shop-locally-registration/index.html
@@ -14,6 +14,7 @@
       background: #E5E5E5;
       font-family: 'Lato';
       line-height: 1.5;
+      font-size: 16px;
     }
 
     .shop-locally {
@@ -43,6 +44,10 @@
       padding-left: 0;
     }
 
+    .form-fields {
+      max-width: 992px;
+    }
+
     .required {
       color: red;
     }
@@ -60,12 +65,12 @@
         <h4>Shop Locally Sign Up</h4>
         Booker Group would like to send you marketing information regarding our products and services, special offers, events and market research. Please tick below to confirm that you're happy for Booker to contact you for this purpose. You can unsubscribe at any time by logging in at booker.co.uk, or by clicking unsubscribe in any of our promotional Emails or SMS messages you receive. Please note that the below preferences refer to marketing activities only. Booker may still contact you by the above methods for essential communication regarding your account.<br>
         <br>
-        For more information regarding help with how Booker Group companies use your personal data please see our privacy policy. For full T&C's <a href="./agreement.pdf" target="_blank">click here</a>
+        For more information regarding help with how Booker Group companies use your personal data please see our privacy policy. For full T&C's <a href="./agreement.pdf">click here</a>
       </div>
       <div class="container p-3 shop-locally mb-3">
         <h4>CUSTOMER DETAILS</h4>
       </div>
-    <div class="container">
+    <div class="container form-fields">
       <div class="form-group">
         <label for="tradingName">Trading Name <span class="required">*</span></label>
         <input type="text" class="form-control" name="tradingName" required>
@@ -102,7 +107,7 @@
       <div class="container p-3 mt-5 mb-3 shop-locally">
         <h6>ADDITIONAL INFORMATION</h6>
       </div>
-      <div class="container">
+      <div class="container form-fields">
         <div class="form-group">    
           <label for="storeCategory">Store Category</label>
           <input type="text" class="form-control form-field" name="storeCategory" required>
@@ -111,7 +116,7 @@
       <div class="container p-3 mt-5 mb-3 shop-locally">
         <h6>CUSTOMER DECLARATION</h6>
       </div>
-      <div class="container">
+      <div class="container form-fields">
         <div class="form-group form-check">
           <input type="checkbox" class="form-check-input"> 
           <label class="form-check-label" for="disclaimer"><i>I am the owner of the above business and trade at the above address. I agree to comply with the obligations set out in this Agreement and in particular to support the promotion activity. I understand that failing to comply with my obligations may result in my membership of Retail Club being cancelled by Booker.</i></label>
