--- a/web-components-4.3.1/index.html
+++ b/web-components-4.3.1/index.html
@@ -121,8 +121,8 @@
     
       <hero-banner-carousel 
         id="hero-banner-carousel"
-        data-arrowColor="#000000"
-        data-arrowBgColor="#ff0000"
+        data-arrowColor="#cccccc"
+        data-arrowBgColor="#ffffff"
         data-arrowShow="true"
       ></hero-banner-carousel>
 
