--- a/web-components-4.3.1/index.html
+++ b/web-components-4.3.1/index.html
@@ -66,9 +66,16 @@
 
     <hr>
 
+     <product-card-list
+        data-brand="relentless"
+      ></product-card-list>
+
       <product-card-list
-        id="product-card-list"
         data-brand="costa coffee"
+      ></product-card-list>
+
+      <product-card-list
+        data-brand="coca-cola"
       ></product-card-list>
 
       <hr>
