--- a/web-components-4.3.1/index.html
+++ b/web-components-4.3.1/index.html
@@ -28,7 +28,7 @@
       ></product-card-list>
 
       <product-card-list
-        data-brand="coca-cola"
+        data-brand="jack daniels"
       ></product-card-list>
     
       <info-card-a
