--- a/web-components-4.3.1/index.html
+++ b/web-components-4.3.1/index.html
@@ -15,22 +15,24 @@
     <div class="container pt-5 pb-5 text-center">
       <img src="//assets-global.website-files.com/61f27d3474c2ef62975a0106/61f27d3474c2ef78475a0118_Booker%20logo.svg" width="200" />
     </div>
-  <product-card-list
-        data-brand="costa coffee"
-      ></product-card-list>
-    
+
     <product-card-list
-        data-brand="relentless"
-      ></product-card-list>
+    data-brand="CostaCoffee"
+  ></product-card-list>
 
-      <product-card-list
-        data-brand="costa coffee"
-      ></product-card-list>
+<product-card-list
+    data-brand="Relentless"
+  ></product-card-list>
 
-      <product-card-list
-        data-brand="jack daniels"
-      ></product-card-list>
-    
+  <product-card-list
+    data-brand="CostaCoffee"
+  ></product-card-list>
+
+  <product-card-list
+    data-brand="JackDaniels"
+  ></product-card-list>
+
+    <hr>
       <info-card-a
         id="info-card-a"
         data-heading="[TITLE] SEASONAL PROMOTION BANNER"
