--- a/web-components-4.3.1/index.html
+++ b/web-components-4.3.1/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Booker web components - shop by brand</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://www.booker.co.uk/bundles/css?v=aOWVYmxHytJpv983HLrHB4UQSThXGXzBi-hPkwNmCCs1">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <script defer src="./app.js"></script>
     <script defer src="./components.js"></script>
